--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ logging.level.root=WARN
 
 spring.security.user.name = user
 spring.security.user.password = user
+
+# Github
+spring.security.oauth2.client.registration.github.client-id = Ov23likq6hrMUq6mE4Ce
+spring.security.oauth2.client.registration.github.client-secret = 31a905553ce3c33cc30b5db4678226b2749a8ec6
+spring.security.oauth2.client.registration.github.scope = read:user, user:email
+
+
+# Google
+spring.security.oauth2.client.registration.google.client-id = 548696086722-694p2m8md7scimn06vpfpnebd51oinor.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret = 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
